🐛 Fixed unreadable error message colour when uploading themes/images (#962)
closes TryGhost/Ghost#9476
- added midgrey to uploader.css upload fail

--- a/ghost/admin/app/styles/components/uploader.css
+++ b/ghost/admin/app/styles/components/uploader.css
@@ -93,6 +93,7 @@
 .gh-image-uploader .failed {
     margin: 1em 2em;
     font-size: 16px;
+    color: color(var(--midgrey));
 }
 
 /* TODO: remove the gh-image-uploader classes once it's using gh-progrss-bar */
